--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,5 @@
   "editor.formatOnSave": true,
   "search.useIgnoreFiles": true,
   "shellcheck.customArgs": ["-x"],
+  "terminal.integrated.defaultProfile.osx": "bash"
 }
