--- a/bin/.launch/compose.yml
+++ b/bin/.launch/compose.yml
@@ -1,8 +1,8 @@
 services:
   local:
     volumes:
-      - __vCLI_OPT_DIR__:/root/project
-      - __vSTATIC_MY_CONFIG_ROOT__:__vSTATIC_SERVER_CONFIG_ROOT__
+      - __vOPT_PROJECT_DIR__:/root/project
+      - __vSTATIC_SOLOS_ROOT__:__vSTATIC_SOLOS_ROOT__
     build:
       dockerfile: ./Dockerfile
     ports:
