--- a/bin/launch/Dockerfile.base
+++ b/bin/launch/Dockerfile.base
@@ -1,4 +1,5 @@
 FROM debian:latest
+SHELL ["/bin/bash", "-c"]
 
 # Base packages
 RUN apt-get update \
@@ -17,22 +18,8 @@ RUN apt-get update \
   openssh-server \
   sudo
 
+RUN touch /usr/local/bin/solos \
+  && chmod +x /usr/local/bin/solos
+
 # Make logs pretty
 ENV TERM=xterm-256color
-
-# Docker in Docker
-RUN sudo apt-get remove docker.io \
-  && sudo apt-get remove docker-doc \
-  && sudo apt-get remove docker-compose \
-  && sudo apt-get remove podman-docker \
-  && sudo apt-get remove containerd \
-  && sudo apt-get remove runc \
-  && install -m 0755 -d /etc/apt/keyrings \
-  && curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc \
-  && chmod a+r /etc/apt/keyrings/docker.asc \
-  && echo \
-  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
-  $(. /etc/os-release && echo "$VERSION_CODENAME") stable" \
-  | tee /etc/apt/sources.list.d/docker.list >/dev/null \
-  && apt-get update \
-  && apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
