--- a/bin/launch/Dockerfile.remote
+++ b/bin/launch/Dockerfile.remote
@@ -1,6 +1,12 @@
 FROM solos:base
 
-# Docker - CLI only
+EXPOSE 22
+
+RUN mkdir /var/run/sshd \
+  && echo 'root:password' | chpasswd \
+  && sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+# Docker in Docker
 RUN sudo apt-get remove docker.io \
   && sudo apt-get remove docker-doc \
   && sudo apt-get remove docker-compose \
@@ -15,7 +21,13 @@ RUN sudo apt-get remove docker.io \
   $(. /etc/os-release && echo "$VERSION_CODENAME") stable" \
   | tee /etc/apt/sources.list.d/docker.list >/dev/null \
   && apt-get update \
-  && apt-get install docker-ce-cli docker-buildx-plugin -y
+  && apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
 
-# Solos mounted script
-ENTRYPOINT "/root/.solos/src/bin/solos.sh" "$@"
+ARG CAPTAIN_VOLUME_DIR
+ARG NODE_VERSION=18.7.0
+ARG NODE_PACKAGE=node-v$NODE_VERSION-linux-x64
+ENV NODE_PATH /opt/$NODE_PACKAGE/lib/node_modules
+ENV PATH /opt/$NODE_PACKAGE/bin:$PATH
+
+RUN curl https://nodejs.org/dist/v$NODE_VERSION/$NODE_PACKAGE.tar.gz | tar -xzC /opt/
+RUN npm install --global caprover
