--- a/bin/launch/Dockerfile.base
+++ b/bin/launch/Dockerfile.base
@@ -4,6 +4,7 @@ SHELL ["/bin/bash", "-c"]
 # Base packages
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install --assume-yes --no-install-recommends \
+  git \
   coreutils \
   awscli \
   ufw \
