--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,37 @@
   "html.format.enable": true,
   "editor.formatOnSave": true,
   "search.useIgnoreFiles": true,
-  "shellcheck.customArgs": ["-x"],
-  "terminal.integrated.defaultProfile.osx": "bash"
+  "terminal.integrated.defaultProfile.osx": "solos",
+  "terminal.integrated.cwd": "${workspaceFolder}",
+  "terminal.integrated.profiles.osx": {
+    "solos": {
+      "path": "/Users/colinlaptop/.solos/src/bin/vscode.sh",
+      "args": []
+    },
+    "bash": null,
+    "zsh": null,
+    "fish": null,
+    "tmux": null,
+    "pwsh": null
+  },
+  "terminal.integrated.profiles.linux": {
+    "bash": {
+      "path": "bash",
+      "icon": "terminal-bash"
+    },
+    "zsh": {
+      "path": "zsh"
+    },
+    "fish": {
+      "path": "fish"
+    },
+    "tmux": {
+      "path": "tmux",
+      "icon": "terminal-tmux"
+    },
+    "pwsh": {
+      "path": "pwsh",
+      "icon": "terminal-powershell"
+    }
+  }
 }
