--- a/bin/launch/Dockerfile.base
+++ b/bin/launch/Dockerfile.base
@@ -19,7 +19,8 @@ RUN apt-get update \
   jq \
   wget \
   openssh-server \
-  sudo
+  sudo \
+  tree
 
 RUN (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
   && sudo mkdir -p -m 755 /etc/apt/keyrings \
