--- a/bin/launch/Dockerfile.shell
+++ b/bin/launch/Dockerfile.shell
@@ -1,4 +1,36 @@
-FROM solos:base
+FROM debian:latest
+SHELL ["/bin/bash", "-c"]
+
+RUN apt-get update \
+  && DEBIAN_FRONTEND=noninteractive apt-get install --assume-yes --no-install-recommends \
+  git-all \
+  coreutils \
+  awscli \
+  ufw \
+  moreutils \
+  rsync \
+  postgresql-client \
+  lsb-release \
+  bash-completion \
+  ca-certificates \
+  man-db \
+  curl \
+  jq \
+  wget \
+  openssh-server \
+  sudo \
+  tree
+
+RUN (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
+  && sudo mkdir -p -m 755 /etc/apt/keyrings \
+  && wget -qO- https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
+  && sudo chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
+  && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+  && sudo apt update \
+  && sudo apt install gh -y
+
+# Make logs pretty
+ENV TERM=xterm-256color
 
 # Docker - CLI only
 RUN sudo apt-get remove docker.io \
@@ -16,5 +48,8 @@ RUN sudo apt-get remove docker.io \
   | tee /etc/apt/sources.list.d/docker.list >/dev/null \
   && apt-get update \
   && apt-get install docker-ce-cli docker-buildx-plugin -y
+
+RUN sudo mkdir -p /etc/solos \
+  && sudo date > /etc/solos/last_build_date
 
 CMD ["tail", "-f", "/dev/null"]
