--- a/launchfiles/Dockerfile.shell
+++ b/launchfiles/Dockerfile.shell
@@ -2,6 +2,7 @@ FROM debian:latest
 
 SHELL ["/bin/bash", "-c"]
 
+# TODO: research whether or not all of these packages are necessary
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install --assume-yes --no-install-recommends \
   git-all \
@@ -22,6 +23,7 @@ RUN apt-get update \
   sudo \
   tree
 
+# Install GitHub CLI
 RUN (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
   && sudo mkdir -p -m 755 /etc/apt/keyrings \
   && wget -qO- https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
