fixed up the rag stuff

--- a/launchfiles/Dockerfile.shell
+++ b/launchfiles/Dockerfile.shell
@@ -21,7 +21,8 @@ RUN apt-get update \
   wget \
   openssh-server \
   sudo \
-  tree
+  tree \
+  strace
 
 # Install GitHub CLI
 RUN (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
