lots of optimizations. pretty much only moving things around and using bind mounts + hard links instead of building a home dir with cp only

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -20,7 +20,8 @@ RUN apt-get update \
   netcat-traditional \
   iptables \
   iproute2 \
-  gpg
+  gpg \
+  rsync
 
 # Install GitHub CLI
 RUN sudo mkdir -p -m 755 /etc/apt/keyrings \
