--- a/src/Dockerfile.extends
+++ b/src/Dockerfile.extends
@@ -57,3 +57,5 @@ RUN sudo apt-get remove docker.io \
   | tee /etc/apt/sources.list.d/docker.list >/dev/null \
   && apt-get update \
   && apt-get install docker-ce-cli docker-buildx-plugin -y
+
+CMD ["tail", "-f", "/dev/null"]
